--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer components {
+
+
+    .tw-container {
+
+        @apply  container mx-auto
+    }
+}
